(attempt to) fix image flicker

--- a/style.css
+++ b/style.css
@@ -8,6 +8,15 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url("background1.png");
+    background-image: url("background2.png");
+    background-image: url("background3.png");
+    background-image: url("background4.png");
+    background-image: url("background5.png");
+    background-image: url("background6.png");
+    background-image: url("background7.png");
+    background-image: url("background8.png");
+    background-image: url("background9.png");
+    background-image: url("background10.png");
     animation: changeBg 480s infinite forwards;
 }
 
